# typing-trainer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  achievements.html  auth.html  builder.html  course.html  dashboard.html  debug-keyboard.html  index.html  keyboard-only.html  keyboard-size-test-backup.html  landing.html  lesson.html  modal-keyboard-test.html  modal-new.html  modal.html  onboarding.html  pricing.html  profile.html  settings.html  task.html
.claude/: SESSION_CONTEXT.md
.claude/agents/: ai-ml-agent.md  backend-agent.md  content-agent.md  devops-agent.md  frontend-agent.md  marketing-agent.md  product-manager-agent.md  project-manager-agent.md  qa-agent.md  security-agent.md  team.txt  technical-writer-agent.md  ux-research-agent.md
.github/workflows/: ci.yml
.sessions/: boris_session.md
admin/: index.html
assets/css/: achievements.css  admin.css  auth.css  builder.css  components.css  course.css  dashboard.css  keyboard.css  landing.css  lesson.css  main.css  modal.css  modal.css.tmp.2736.1758901483200  modal.css.tmp.2736.1758901736226  onboarding-v2.css  onboarding.css  pricing.css  profile.css  settings.css  task.css
assets/js/: achievements-page.js  achievements.js  admin.js  api-client.js  audio.js  auth-sync.js  auth.js  builder.js  certification.js  character-system.js  coach.js  course.js  dashboard.js  exercise-progress.js  i18n.js  keyboard-controller.js  keyboard-data.js  keyboard-layouts.js  keyboard.js  lesson-loader.js  lesson-page.js  lesson-summary.js  main.js  modal.js  onboarding.js  pow-worker.js  pricing.js  stats.js  (+9 more)
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  202606071800_initial_schema.py  202607011200_billing_provider_column.py  202607021400_admin_rbac_audit.py  202607021600_charge_status_refunded.py  202607021800_refund_idempotency_unique.py  202607021900_admin_2fa.py
backend/app/: __init__.py  cli.py  config.py  deps.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  billing.py  events.py  health.py  lessons.py  me.py  oauth.py
backend/app/core/: __init__.py  billing.py  captcha.py  db.py  email_tokens.py  exceptions.py  logging.py  oauth.py  redis.py  security.py  totp.py
backend/app/core/emails/: __init__.py  renderer.py
backend/app/core/emails/templates/password_reset/: en.html  ru.html
backend/app/core/emails/templates/verify_email/: en.html  ru.html
backend/app/core/emails/templates/welcome/: en.html  ru.html
backend/app/models/: __init__.py  admin.py  admin_2fa.py  base.py  event.py  progress.py  subscription.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  billing.py  events.py  lessons.py  me.py
backend/app/services/: __init__.py  admin_2fa_service.py  admin_service.py  analytics_service.py  auth_service.py  billing_service.py  email_service.py  event_service.py  me_service.py  oauth_service.py
backend/app/tasks/: __init__.py
backend/app/tests/: __init__.py  conftest.py  test_auth.py  test_billing.py  test_captcha.py  test_config.py  test_email.py  test_health.py  test_models.py  test_security.py
backend/nginx/: admin_allowlist.conf  dev-proxy.conf
backend/scripts/: start.sh  verify_admin_2fa.py  verify_admin_billing.py
config/: settings.js
data/: quotes.json
docs/: AGENT_TEAM.md  CONTENT_COMPLETION_REPORT.md  INDEX.md  Learning_Best_Practices_Analysis.md  README.md  ROADMAP.md  SESSION_SYNC.md  TEAM_INTRODUCTION.md  Вопросы.txt
error/: кнопки.txt  сравнение.psd
scripts/: _api_mock_server.py  ci_check_json.py  ci_run_gate.py  content_review_b5.py  content_review_pass.py  devserver.py  fix_keys_trained.py  gen_kids_b2_b5.py  gen_ru_kids_all.py  gen_ru_teen_b1.py  gen_ru_teen_b2.py  gen_ru_teen_b3.py  gen_ru_teen_b4.py  gen_ru_teen_b5.py  gen_ru_tier1_b4.py  gen_ru_tier1_b5.py  gen_ru_tier1_b6.py  gen_ru_tier1_b7.py  gen_teen_b2.py  gen_teen_b3.py  gen_teen_b4.py  gen_teen_b5.py  gen_teen_kids_lessons.py  generate_lesson_sequence.py  lint_lessons.py  migrate_lessons_rich_tips.py  migrate_steps_declarative.py  regen_text_sequence.py  showcase_v02.py  verify_achievements.py  verify_adaptive_phase2.py  verify_age_routing.py  verify_all_pages_smoke.py  verify_api_client.py  verify_api_client_mock.py  verify_bestwpm_migration.py  verify_builder.py  verify_course.py  verify_course_gating.py  verify_dashboard.py  (+33 more)
(+788 files in other folders)
