[project]
name = "typing-trainer-backend"
version = "0.1.0"
description = "Backend для typing-trainer SaaS (FastAPI + PostgreSQL)"
authors = [{ name = "Борис (Backend Agent)" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",            # async driver — рантайм приложения
    "psycopg2-binary>=2.9.10",    # sync driver — alembic migrations (env.py sync engine)
    "alembic>=1.14.0",
    # Validation / Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # Auth / Security
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",              # TOTP (RFC 6238) — admin 2FA (Ф4b)
    # Cache / Queue
    "redis>=5.2.0",
    "arq>=0.26.3",
    # HTTP client (для OAuth / YooKassa)
    "httpx>=0.27.0",
    # Email (S1.7+): async SMTP + Jinja2-шаблоны (i18n RU+EN, ADR-005 §8)
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    # Logging
    "structlog>=24.4.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Scheduler (cleanup анонимов 3д TTL — ADR-001)
    "apscheduler>=3.10.0",
]

[dependency-groups]
dev = [
    # Капы <9/<1: без lock-файла CI тянет свежие major'ы; pytest-asyncio 1.x
    # сломал семантику event loop (conftest db-фикстуры ловят «attached to a
    # different loop» на asyncpg). Снять при переезде на uv.lock + миграции конфтеста.
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=4.8.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.0",
    "types-passlib>=1.7.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Ruff (lint + format) ─────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long (line-length уже >= 100)
    "B008",   # function calls in defaults (нужно для FastAPI Depends)
    # кириллица в русских докстрингах/комментариях — ложные ambiguous-срабатывания
    # для RU-кодовой базы
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["S101"]  # asserts ok в тестах

# ─── Mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["alembic/", "app/tests/"]

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "arq.*",
    "apscheduler.*",
    "slowapi.*",
    "pyotp.*",
]
ignore_missing_imports = true

# ─── Pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
# Явный контракт event loop'ов: async-фикстуры (db_engine/db_session_fixture)
# и async-тесты живут в ОДНОМ function-scoped loop'е — обязательное условие
# для asyncpg (db_client в conftest ходит через httpx.ASGITransport в том же
# loop'е). Опция есть с pytest-asyncio 0.24 (пин >=0.24,<1 — безопасно при
# --strict-config); заодно гасит DeprecationWarning 0.26 про unset scope.
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: integration tests, требуют запущенной БД",
    "slow: медленные тесты (k6, load)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
